# opentelemetry-collector-rs

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
component/src/: build_info.rs  component.rs  config.rs  lib.rs
config/: Cargo.toml
config/src/: lib.rs
config/src/configgrpc/: mod.rs
config/src/confignet/: mod.rs
dev/makefiles/: format_makefile.toml
exporter/: Cargo.toml
exporter/src/: exporter.rs  lib.rs
exporter/src/loggingexporter/: factory.rs  mod.rs
otelcol/: Cargo.toml
otelcol/src/: collector.rs  factories.rs  lib.rs
otelcorecol/: Cargo.toml
otelcorecol/src/: components.rs  main.rs
receiver/: Cargo.toml
receiver/src/: lib.rs  receiver.rs
receiver/src/otlpreceiver/: config.rs  factory.rs  mod.rs
src/: lib.rs
src/cmd/otelcorecol/: components.rs
src/otelcol/: factories.rs  mod.rs
