# [package]# name = "opentelemetry-collector-rs"# version = "0.1.0"# edition = "2021"
# default-run = "otelcorecol"

# # ====

# component = { path = "./component" }
# receiver = { path = "./receiver" }

# [[bin]]
# name = "otelcorecol"
# path = "src/cmd/otelcorecol/main.rs"

[workspace]

members = ["component", "config", "otelcol", "otelcorecol", "receiver", "exporter"]

[workspace.dependencies]
anyhow = { version = "1.0.70", default-features = false, features = [
  "std",
  "backtrace",
] }
serde = { version = "1.0", default-features = false ,features = ["std", "derive"]}
tokio = { version = "1.26.0", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
  "std",
  "attributes",
] }

component = { path = "./component" }
receiver = { path = "./receiver" }
otelcol = { path = "./otelcol" }
exporter = { path = "./exporter"}
config = { path = "./config" }
